--- a/src/index.css
+++ b/src/index.css
@@ -2,73 +2,104 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+@font-face {
+  font-family: CabinetGroteskBlack;
+  src: url('./assets/fonts/CabinetGrotesk-Black.woff2') format('woff2');
+  font-weight: 900;
 }
 
-a {
+@font-face {
+  font-family: CabinetGroteskExtraBold;
+  src: url('./assets/fonts/CabinetGrotesk-Extrabold.woff2') format('woff2');
+  font-weight: 800;
+}
+
+@font-face {
+  font-family: CabinetGroteskBold;
+  src: url('./assets/fonts/CabinetGrotesk-Bold.woff2') format('woff2');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: CabinetGroteskMedium;
+  src: url('./assets/fonts/CabinetGrotesk-Medium.woff2') format('woff2');
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
+
+@font-face {
+  font-family: CabinetGroteskRegular;
+  src: url('./assets/fonts/CabinetGrotesk-Regular.woff2') format('woff2');
+  font-weight: 400;
+}
+
+html, body {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	color: #391F68;
+	font-family: CabinetGroteskRegular;
+	font-size: 18px;
+	font-display: swap;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+main {
+	/* margin top value depends on the height of the header with navbar */
+	margin-top: 4rem; 
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+a:hover {
+	text-decoration: underline;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+a {
+	font-family: CabinetGroteskBold;
+	letter-spacing: 0.01em;
+}
+
+input, button, select, textarea {
+	font-family: inherit;
+	font-size: inherit;
+	-webkit-padding: 0.4em 0;
+	padding: 0.4em;
+	margin: 0 0 0.5em 0;
+	box-sizing: border-box;
+	border: 1px solid #ccc;
+	border-radius: 2px;
+}
+
+.txt-extrabold {
+	font-family: CabinetGroteskExtraBold;
+	letter-spacing: 0.04em;
+}
+
+.txt-bold {
+	font-family: CabinetGroteskBold;
+	letter-spacing: 0.01em;
+}
+
+.txt-medium {
+	font-family: CabinetGroteskMedium;
+}
+
+.txt-normal {
+	font-family: CabinetGroteskRegular;
+}
+
+.section-heading {
+	font-family: CabinetGroteskBold;
+	letter-spacing: 0.01em;
+	font-size: 46px;
+}
+
+ol {
+	list-style: decimal;
+	margin: auto;
+	padding-left: 2rem;
 }
