--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,12 @@
   font-weight: 400;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html,
 body {
   position: relative;
@@ -31,8 +37,5 @@ body {
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
   font-family: Satoshi, serif;
 }
